--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="/src/assets/css/desktop/maruti9/custom.css" />
 
     <link rel="stylesheet" href="/src/assets/css/depositWithdraw.css" />
+    <link rel="stylesheet" href="/src/assets/css/style_a23.css" />
   </head>
   <body style="background: none !important">
     <div id="root"></div>
